- Add Stripe payment gateway! Accept credit cards directly on your site with full PCI compliance
- Add custom API url support to Authorize.net gateway for compatibility with many 3rd party gateways
- Add beta PayPal Payflow Pro gateway
- Add beta iDEAL gateway (ING bank only)
- Fix translation issues for gateway and shipping plugin names
- Fix bug with category dropdown widget
- Fix custom menu current item highlighting in WP 3.3
- Fix tax calculation bug with Google Checkout gateway for orders with no tax
- Fix lightbox z-index on Twenty Eleven theme
- Make shipping fields behavior consistent with global cart enabled
- Fix currency rounding problem for large prices with decimals off
- Remove add to cart button when in product listing mode and no custom link set
- Allow $0 sale prices

2.4.2 - 12/16/2011 - Aaron Edwards
----------------------------------------------------------------------
- Fix a fatal bug introduced to the PayPal express gateway in 2.4.1. Important update!
- Add sanity checks for long product names into PayPal gateway to prevent errors

2.4.1 - 12/14/2011 - Aaron Edwards
----------------------------------------------------------------------
- Fix negative quantities being able to be added to your cart: http://premium.wpmudev.org/forums/topic/marketpress-security-bug
- Fix removing cart items when global is set to on
- Gracefully handle global carts if a seller hasn't configured PayPal by skipping their checkout
- Handle SSL properly on checkout page
- Fix out of stock AJAX message for variation products: http://premium.wpmudev.org/forums/topic/out-of-stock-triggers-when-only-one-of-the-variations-is-sold-out-but-others-are-still-available
- Hook into logout to clear personal session information: http://premium.wpmudev.org/forums/topic/security-issue-with-marketpress

2.4 - 12/12/2011 - Aaron Edwards
----------------------------------------------------------------------
- WP 3.3 Compatibility - Not backwards compatible