@@ -24,6 +24,7 @@ Change Log:
 - Add custom API url support to Authorize.net gateway for compatibility with many 3rd party gateways
 - Add beta PayPal Payflow Pro gateway
 - Add beta iDEAL gateway (ING bank only)
+- Add setting to hide Product Image on single pages
 - Fix translation issues for gateway and shipping plugin names
 - Fix bug with category dropdown widget
 - Fix custom menu current item highlighting in WP 3.3
